<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />
    
    <item
        android:id="@+id/navigation_jobs"
        android:icon="@drawable/ic_jobs"
        android:title="@string/jobs" />
    
    <item
        android:id="@+id/navigation_network"
        android:icon="@drawable/ic_network"
        android:title="@string/network" />
    
    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications"
        android:title="@string/notifications" />
    
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile" />
</menu>
